--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,13 +1,27 @@
 pipeline {
-    agent any
-    parameters {
-        choice (choices: ["TEST", "DEV", "QA", "PRE-PROD","PROD"], description: "which environment to deploy in?", name: "deployEnv")
-    }
+  agent any
     stages {
-        stage ("Demo") {
+        stage('Build') {
             steps {
-                echo " choice is set to: ${params.deployEnv}"
+                sh 'mvn -B -DskipTests clean package'
             }
         }
-    }
-}
+        stage('Test') {
+            steps {
+                sh 'mvn test'
+            }
+            post {
+                always {
+                    junit 'target/surefire-reports/*.xml'
+                }
+            }
+        }
+        stage('Deliver') {
+            steps {
+                sh './jenkins/scripts/deliver.sh'
+            }
+        }
+     
+             }
+   }
+
